<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just Java</string>
    <string name="toppings">Toppings</string>
    <string name="name">Name</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="order">Order</string>
    <string name="reset_order">Reset Order</string>
    <string name="sorry_no_order">Sorry, your order could not be placed</string>
    <string name="order_placed">Your order has been placed</string>
    <string name="email_id">tushar.kokane15@gmail.com</string>
    <string name="just_java_order">Just Java order for</string>
    <string name="name_java">Name: <xliff:g id="name_java" example="Tushar">%s</xliff:g></string>
</resources>
